# RocketSim

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
cmeel/: impl.py
libsrc/bullet3-3.24/BulletDynamics/Dynamics/: btRigidBody.h
python/: Angle.cpp  Arena.cpp  Array.cpp  Array.h  Ball.cpp  BallHitInfo.cpp  BallState.cpp  BoostPad.cpp  BoostPadState.cpp  Car.cpp  CarConfig.cpp  CarControls.cpp  CarState.cpp  Makefile  Module.cpp  Module.h  MutatorConfig.cpp  PyRef.h  README.md  RotMat.cpp  Vec.cpp  WheelPairConfig.cpp  regression_test.py  setup.py  unit_test.py
python-mtheall/: Arena.cpp  ArenaConfig.cpp  Ball.cpp  BallHitInfo.cpp  BallState.cpp  BoostPadState.cpp  Car.cpp  CarState.cpp  Makefile  Module.cpp  Module.h  MutatorConfig.cpp  regression_test.py  unit_test.py
src/: Framework.h  RocketSim.cpp  RocketSim.h
src/CollisionMeshFile/: CollisionMeshFile.cpp  CollisionMeshFile.h
src/DataStream/: DataStreamIn.h  DataStreamOut.h
src/Math/: Math.cpp
src/Math/MathTypes/: MathTypes.h
src/Sim/: CarControls.h
src/Sim/Arena/: Arena.cpp  Arena.h
src/Sim/Ball/: Ball.cpp  Ball.h
src/Sim/BoostPad/: BoostPad.cpp  BoostPad.h
src/Sim/BoostPad/BoostPadGrid/: BoostPadGrid.cpp  BoostPadGrid.h
src/Sim/Car/: Car.cpp
src/Sim/MutatorConfig/: MutatorConfig.h
