[project]
name            = "RocketSim"
version         = "2.1.1.post1"
description     = "This is Rocket League!"
dependencies    = ["numpy"]
requires-python = ">= 3.9"

[build-system]
requires      = ["cmeel[build]", "numpy>=2.0,<3"]
build-backend = "cmeel"
backend-path  = "."

[tool.cmeel]
run-tests = false
